# exoproject

./: CMakeLists.txt  README.md  checkout.sh
exoapps/: CMakeLists.txt  (+1 more)
exoapps/hardwarecontrol/: .gitignore  CMakeLists.txt  README.md  hwc_main.c
exoapps/hardwarecontrol/comp-interface/: CMakeLists.txt
exoapps/hardwarecontrol/comp-interface/anode/: CMakeLists.txt
exoapps/hardwarecontrol/component/: CMakeLists.txt  component_callback.c  component_callback.h  component_communication.c  component_communication.h  component_service.c  component_service.h
exoapps/hardwarecontrol/include/: CMakeLists.txt  hardwarecontrol_version.h  hwc_main.h  mcu_include.h
exoapps/hardwarecontrol/operations/: CMakeLists.txt  operations.c  operations.h
exoapps/system-control/halo12-x86/: CMakeLists.txt  README.md
exodrivers/: CMakeLists.txt
exodrivers/drivers/atmega64m1/: CMakeLists.txt
exodrivers/drivers/samv71/: CMakeLists.txt
exodrivers/drivers/va41630/: CMakeLists.txt
exodrivers/drivers/x86/: CMakeLists.txt
exodrivers/hal/: CMakeLists.txt
exodrivers/hal/adc/: hal_adc.c  hal_adc.h
exodrivers/hal/can/: hal_can.h
exodrivers/hal/comp/: common_comp.h
exodrivers/hal/dac/: hal_dac.h
exodrivers/hal/ebi/: hal_ebi.h
exodrivers/hal/flash/: hal_flash.h
exodrivers/hal/gpio/: hal_gpio.h
exodrivers/hal/hardware_port/: hal_hardware_port.h
exodrivers/hal/include/: hal.h
exodrivers/hal/serial/: hal_serial.h
exodrivers/hal/timer/: hal_timer.h
exodrivers/hal/watchdog/: hal_watchdog.h
exomodules/: .gitignore  CMakeLists.txt  README.md
exomodules/bootloader-server/: CMakeLists.txt  bootloader_server.c  bootloader_server.h
exomodules/canopen/: CMakeLists.txt  app_dict.c  app_dict.h  app_stdobj.h  co_task.c  co_task.h
exomodules/canopen/halo12/: CMakeLists.txt  app_emcy.c  app_emcy.h  co_callbacks.c  co_callbacks.h  co_project_spec.c  co_project_spec.h  thruster_control_spec.c  thruster_control_spec.h  user_object_config.c  user_object_config.h  user_object_od_indexes.h
exomodules/client-control/: CMakeLists.txt  client_booted.c  client_booted.h  client_control.c  client_control.h  client_error_details.h  client_health.c  client_health.h  client_lockout.c  client_lockout.h  client_service.c  client_service.h  control_autostart.c  control_autostart.h
exomodules/client-control/include/: client_p.h
exomodules/client-control/power/: CMakeLists.txt  client_power.h  client_power_halo12.c
exomodules/client-update-server/: CMakeLists.txt  ClientUpdateServer.drawio  client_update_server.c  client_update_server.h
exomodules/component/: CMakeLists.txt
exomodules/component/anode/: CMakeLists.txt  control_anode.c  control_anode.h  control_anode_halo12.c
exomodules/component/cmd/: CMakeLists.txt  command_anode.c  command_anode.h  command_keeper.c  command_keeper.h  command_magnets.c  command_magnets.h
exomodules/component/keeper/: CMakeLists.txt  control_keeper.c  control_keeper.h  control_keeper_halo12.c
exomodules/component/magnet/: CMakeLists.txt  control_magnets.c  control_magnets.h  control_magnets_halo12.c
exomodules/component/valve/: CMakeLists.txt  control_valves.c  control_valves.h
exomodules/conditioning/: CMakeLists.txt  control_condition.c  control_condition.h
exomodules/conditioning/private-include/: seq_cond.h  seq_cond_definition.h  seq_cond_halo12_xenon_silver_boeing.h.in  seq_cond_halo6_krypton_silver_bct.h.in
exomodules/configuration/: configuration.h
exomodules/error/: CMakeLists.txt  error_handler.c  error_handler.h  fault_handler.c  fault_handler.h  fault_handler_nops.c
exomodules/health/: CMakeLists.txt  health.c  health.h
exomodules/health/diag/: diag_halo12.h.in
exomodules/iacm/: CMakeLists.txt  iacm.c  iacm.h  iacm_nop.c
exomodules/icm/: CMakeLists.txt  tc_icm.c  tc_icm.h  tc_icm_nop.c
exomodules/include/: component_type.h  ext_decl_define.h  hsi_memory.h  master_image_constructor.h  msg_callback.h  thruster_control.h
exomodules/msg-handler/: CMakeLists.txt  msg_handler.h  msg_handler_bm.c  msg_handler_rtos.c
exomodules/msg-handler/doc/: component_task.drawio
exomodules/osal/: CMakeLists.txt  osal.h  osal_bm.c  osal_bm.h  osal_freertos.c  osal_freertos.h  osal_linux.c  osal_linux.h
exomodules/sequence/: CMakeLists.txt  README.md
exomodules/sequence/bit/: CMakeLists.txt  control_bit.c  control_bit.h  sequence_bit_halo12.c
exomodules/sequence/sequence/: CMakeLists.txt  control_sequence.c  control_sequence.h
exomodules/sequence/setpoint/: CMakeLists.txt  control_setpoint.c  control_setpoint.h  control_setpoint_halo12_xenon_silver_boeing.c
exomodules/sequence/throttle/: CMakeLists.txt  control_throttle.c  control_throttle.h  control_throttle_halo12_xenon_silver_boeing.c  sequence_throttle.h
exomodules/sequence/thruster-start/: CMakeLists.txt  control_thruster_start.c  control_thruster_start.h  control_thruster_start_halo12_xenon_silver_boeing.c
exomodules/storage/: CMakeLists.txt  component_map_def.h  storage_class.h  storage_helper.c  storage_helper.h  storage_memory.c  storage_memory.h  storage_memory_interface.c  storage_memory_interface.h
exomodules/storage/docs/: Storage_Memory.drawio  storage_memory_driver.md
exomodules/storage/include/: CMakeLists.txt  magic_numbers.h
exomodules/storage/x86/: CMakeLists.txt  storage_memory_driver_x86.c
exomodules/sys/: CMakeLists.txt  sys_timers.c  sys_timers.h  sys_timers_old.c  sys_timers_old.h
exomodules/task-monitor/: CMakeLists.txt  component_tasks.c  component_tasks.h  task_monitor.c  task_monitor.h
exomodules/task-monitor/doc/: task_monitor.drawio
exomodules/task-monitor/halo12/: CMakeLists.txt  task_monitor_halo12.c
exomodules/trace/: CMakeLists.txt  trace.c  trace.h  trace_flags.h
exomodules/update/: CMakeLists.txt  update_command.c  update_command.h  update_helper.c  update_helper.h
exomodules/user-setting-values/: CMakeLists.txt  calib_vals_usv.c  calib_vals_usv.h  client_control_usv.c  client_control_usv.h
exomodules/utils/: CMakeLists.txt  binary_range_tree.c  binary_range_tree.h  circular_buffer.c  macro_tools.h  stack.c  stack.h
(+448 files in other folders)
