if("${EXOPROJECT_APP_SUBTYPE}" STREQUAL "sequence-tests")
    add_subdirectory(${EXOPROJECT_APP_SUBTYPE})
elseif("${EXOPROJECT_APP_SUBTYPE}" STREQUAL "ebi-memory-test")
    add_subdirectory(${EXOPROJECT_APP_SUBTYPE})
elseif("${EXOPROJECT_APP_SUBTYPE}" STREQUAL "can-bm-tests")
    add_subdirectory(${EXOPROJECT_APP_SUBTYPE})
elseif("${EXOPROJECT_APP_SUBTYPE}" STREQUAL "storage-memory")
    add_subdirectory(${EXOPROJECT_APP_SUBTYPE})
endif()
